<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_margin="@dimen/eight_dp"

        android:visibility="gone">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/text"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="@string/text_for_post"

                android:inputType="text"

                android:padding="@dimen/eight_dp"

                android:layout_marginBottom="@dimen/eight_dp"

                android:autofillHints="text"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <EditText
                android:id="@+id/desc"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="@string/desc_for_post"

                android:inputType="number"

                android:maxLength="1"

                android:padding="@dimen/eight_dp"

                android:layout_marginTop="@dimen/eight_dp"

                android:autofillHints="text"

                app:layout_constraintTop_toBottomOf="@id/text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <Button
                android:id="@+id/addImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="@dimen/eight_dp"
                android:text="@string/add_image"
                app:layout_constraintBottom_toBottomOf="parent"

                app:layout_constraintEnd_toStartOf="@+id/submitButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/desc" />

            <Button
                android:id="@+id/submitButton"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"

                android:layout_marginTop="@dimen/eight_dp"
                android:text="@string/submit"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/desc"
                app:layout_constraintStart_toEndOf="@+id/addImage"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</layout>